<resources>
    <string name="app_name">LMSVVIT</string>
    <string name="slide_1_title">Hello !</string>
    <string name="slide_1_desc">The easiest way to Apply for a Leave!</string>
    <string name="slide_2_title">LMSVVIT</string>
    <string name="slide_2_desc">Track your leaves</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="btn_login">LOGIN</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="leaves_available">No. of Casual Leaves Available : </string>
    <string name="sick_available">No. of Sick Leaves Available : </string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="sick_used">No. of Sick Leaves Used : </string>
    <string name="leaves_used">No. of Leaves Used : </string>
    <string name="add_to_widget">Add To Widget</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="personal_information">Personal Information</string>
    <string name="leaves_applied">Leaves Applied</string>
    <string name="leaves_summary">Leaves Summary</string>
    <string name="leave_applications">Applicants</string>
    <string name="type_of_leave">Type of Leave</string>
    <string name="reason_for_leave">Reason for Leave</string>
    <string name="status_of_leave">Status of Leave :</string>
    <string name="applied_dates">Applied Dates :</string>
    <string name="no_of_days_applied">No.of Days Applied</string>
    <string name="date_in_which_leave_is_applied">Date in which leave is applied</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="casual_leaves_in_balance">Casual Leaves in Balance :</string>
    <string name="casual_leaves_availed">Casual Leaves Availed :</string>
    <string name="sick_leaves_in_balance">Sick Leaves in Balance :</string>
    <string name="sick_leaves_in_availed">Sick Leaves in Availed :</string>
    <string name="leave_applied_on">Leave Applied on :</string>
    <string name="status">status</string>
    <string name="applicant_name">Applicant Name:</string>
    <string name="no_data_to_display">No data to display</string>

    <string name="home_footer">ca-app-pub-6336523906622902/1584570296</string>
    <string name="welcome">Welcome ,</string>
    <string name="no_internet">No Internet, Check Network Connection</string>
    <string name="invalid_auth">Invalid Username/Password</string>
    <string name="casual_leaves">Casual Leaves</string>
    <string name="sick_leaves">Sick Leaves</string>
    <string name="fetching_data">Fetching Data....</string>
    <string name="notify_frag">notificationFragment</string>
    <string name="fragment">fragment</string>
    <string name="employee">employee</string>
    <string name="cl_balance">Casual Leaves in Balance :</string>
    <string name="cl_used">Casual Leaves Availed :</string>
    <string name="sl_balance">Sick Leaves in Balance :</string>
    <string name="sl_used">Sick Leaves Availed :</string>
    <string name="female">Female</string>
    <string name="ml_balance">Maternity Leaves in Balance :</string>
    <string name="ml_used">Maternity Leaves Availed :</string>
    <string name="hod">HoD</string>
    <string name="no_leaves_applied">No Leaves Applied or in Pending</string>
    <string name="leave_applied">Leave Applied on</string>
    <string name="ad_id">ca-app-pub-6336523906622902~6817819328</string>
    <string name="enter_leaves">Please Enter number of leaves required</string>
    <string name="select_date">Select Dates</string>
    <string name="ok">OK</string>
    <string name="error">Error: Selected must not exceed Required leaves</string>
    <string name="cancel">Cancel</string>
    <string name="cancelled">Cancelled</string>
    <string name="maternity_leaves">Maternity Leaves</string>

</resources>
